tests/invalid/overloading.err_exp
overloading.m:057: In clause for predicate `p'/4:
overloading.m:057:   in unification of [38;5;87mvariable `OptInfo'[39;49m
overloading.m:057:   and term [38;5;87m`opt_info(MustHaveOwnSlot, EverOnStack,[39;49m
overloading.m:057:   [38;5;87mCurIntervalId, V_22, Counter1, StartMap0, EndMap0,[39;49m
overloading.m:057:   [38;5;87mVarsMap0, SuccMap0)':[39;49m
overloading.m:057:   type error in argument of functor `opt_info'/9.
overloading.m:057:   [38;5;87mArgument 3 (CurIntervalId)[39;49m has type
overloading.m:057:     [38;5;203moverloading.interval_id,[39;49m
overloading.m:057:   expected type was
overloading.m:057:     [38;5;40mtree234.tree234([39;49m
overloading.m:057:       [38;5;40mterm.var(term.generic),[39;49m
overloading.m:057:       [38;5;40mtree234.tree234(overloading.goal_path, string)[39;49m
overloading.m:057:     [38;5;40m).[39;49m
